--- a/pages/about-us.html
+++ b/pages/about-us.html
@@ -12,12 +12,10 @@
 <body>
     <header>
         <nav>
-
-            <div id="logo"><a href="index.html" target="_self">Eigaku</a></div><!--логотип-->
-
+            <div id="logo"><a href="../index.html" target="_self">EIGAKU</a></div><!--логотип-->
             <div id="nav-medium">
                 <ul id="not-burger"><!--три челикса-->
-                    <li><a href="/index.html" target="_self">Главная</a></li>
+                    <li><a href="../index.html" target="_self">Главная</a></li>
                     <li id="catalog">
                         <a href="#">каталог</a>
                         <div id="catalog-content">
@@ -25,38 +23,59 @@
                             <a href="#">музыка</a>
                         </div>
                     </li>
-                    <li><a href="about-us.html" target="_self">о нас</a></li>
+                    <li><a href="../pages/about-us.html" target="_self">о нас</a></li>
                 </ul>
-
-                <form action="/search" method="get"> <!--поиск-->
+                <form action="/search" method="get" id="search"> <!--поиск-->
                     <input type="search" name="search" placeholder="Поиск">
                     <!-- <button type="submit">Найти</button> -->
                 </form>
-
-
             </div>
-
-
             <div class="menu"> <!--бургер менюха-->
                 <input type="checkbox" id="burger-checkbox" class="burger-checkbox"> <!--создаем чекбокс-->
                 <label for="burger-checkbox" class="burger"></label>
                 <ul class="menu-list">
-                    <li><a href="/pages/login.html" class="menu-item">Моя медиатека</a>
+                    <li><a href="../pages/registration.html" class="menu-item">коллекции</a>
                     <li>
+                    <li id="burger-catalog">
+                        <div id="burger-catalog-menu">
+                            <a href="#">кино</a>
+                            <a href="#">музыка</a>
+                        </div>
+                        <a href="#" class="menu-item">каталог</a>
+                    </li>
+                    <li><a href="../pages/about-us.html" target="_self" class="menu-item">о нас</a></li>
                     <li><a href="#" class="menu-item">Подписка</a>
                     <li>
                     <li><a href="#" class="menu-item">Настройки</a>
                     <li>
                 </ul>
             </div>
-
-
         </nav>
     </header>
     <div class="all">
         <h1>eigaku</h1>
-        <p>kfboisboa</p>
+        <p>Eigaku — это прототип веб-сайта интегрированной мультимедийной библиотеки. Название образовано от японских
+            слов «Eiga» (映画 — кино) и «Ongaku» (音楽 — музыка), что символизирует основную концепцию платформы.
+
+            Цель сайта — продемонстрировать концепцию бесшовного объединения кино и музыки в рамках единого цифрового
+            пространства. В отличие от отдельных сервисов для фильмов и музыки, Eigaku предлагает среду, где эти форматы
+            связаны смыслово и функционально: на странице фильма можно сразу найти и послушать его саундтрек, а на
+            странице музыки — увидеть фильмы, в которых она звучала. Сайт служит наглядным доказательством идеи о том,
+            что устранение искусственных границ между типами контента создаёт более глубокий, удобный и целостный
+            пользовательский опыт.</p>
     </div>
+    <footer>
+        <div id="footer-items">
+            <span>&copy; 2025 <a href="../index.html" target="_self">EIGAKU</a> </span>
+            <div id="icons">
+                <span class="iconify" data-icon="bxl:telegram"></span>
+                <span class="iconify" data-icon="bxl:whatsapp"></span>
+                <span class="iconify" data-icon="bxl:gmail"></span>
+            </div>
+            <span><a href="../pages/about-us.html" target="_self">о нас</a></span>
+        </div>
+    </footer>
+    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
 
 </body>
 
