--- a/pages/autorisation.html
+++ b/pages/autorisation.html
@@ -4,20 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/autorisation.css">
-    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="../css/autorisation.css">
+    <link rel="stylesheet" href="../css/base.css">
     <title>registration</title>
 </head>
 
 <body>
     <header>
         <nav>
-
-            <div id="logo"><a href="index.html" target="_self">Eigaku</a></div><!--логотип-->
-
+            <div id="logo"><a href="../index.html" target="_self">EIGAKU</a></div><!--логотип-->
             <div id="nav-medium">
                 <ul id="not-burger"><!--три челикса-->
-                    <li><a href="/index.html" target="_self">Главная</a></li>
+                    <li><a href="../index.html" target="_self">Главная</a></li>
                     <li id="catalog">
                         <a href="#">каталог</a>
                         <div id="catalog-content">
@@ -25,32 +23,33 @@
                             <a href="#">музыка</a>
                         </div>
                     </li>
-                    <li><a href="about-us.html" target="_self">о нас</a></li>
+                    <li><a href="../pages/about-us.html" target="_self">о нас</a></li>
                 </ul>
-
-                <form action="/search" method="get"> <!--поиск-->
+                <form action="/search" method="get" id="search"> <!--поиск-->
                     <input type="search" name="search" placeholder="Поиск">
                     <!-- <button type="submit">Найти</button> -->
                 </form>
-
-
             </div>
-
-
             <div class="menu"> <!--бургер менюха-->
                 <input type="checkbox" id="burger-checkbox" class="burger-checkbox"> <!--создаем чекбокс-->
                 <label for="burger-checkbox" class="burger"></label>
                 <ul class="menu-list">
-                    <li><a href="/pages/registration.html" class="menu-item">Моя медиатека</a>
+                    <li><a href="../pages/registration.html" class="menu-item">коллекции</a>
                     <li>
+                    <li id="burger-catalog">
+                        <div id="burger-catalog-menu">
+                            <a href="#">кино</a>
+                            <a href="#">музыка</a>
+                        </div>
+                        <a href="#" class="menu-item">каталог</a>
+                    </li>
+                    <li><a href="../pages/about-us.html" target="_self" class="menu-item">о нас</a></li>
                     <li><a href="#" class="menu-item">Подписка</a>
                     <li>
                     <li><a href="#" class="menu-item">Настройки</a>
                     <li>
                 </ul>
             </div>
-
-
         </nav>
     </header>
 
@@ -74,23 +73,36 @@
                         <input type="submit" value="войти">
                     </div>
                 </div>
-                <p>нет аккаунта? <a href="/pages/registration.html">зарегистрироваться</a></p>
-                
+                <p>нет аккаунта? <a href="../pages/registration.html">зарегистрироваться</a></p>
+
             </form>
         </div>
 
     </div>
-<script>
-    document.querySelector('input[type="submit"]').onclick = function(e) {
-  e.preventDefault();
-  alert('✅ вход выполнен успешно!');
-  
-  // Очищаем ближайшую форму
-  if (this.form) {
-    this.form.reset();
-  }
-};
-</script>
+    <footer>
+        <div id="footer-items">
+            <span>&copy; 2025 <a href="../index.html" target="_self">EIGAKU</a> </span>
+            <div id="icons">
+                <span class="iconify" data-icon="bxl:telegram"></span>
+                <span class="iconify" data-icon="bxl:whatsapp"></span>
+                <span class="iconify" data-icon="bxl:gmail"></span>
+            </div>
+            <span><a href="../pages/about-us.html" target="_self">о нас</a></span>
+        </div>
+    </footer>
+    <script>
+        document.querySelector('input[type="submit"]').onclick = function (e) {
+            e.preventDefault();
+            alert('✅ вход выполнен успешно!');
+
+            // Очищаем ближайшую форму
+            if (this.form) {
+                this.form.reset();
+            }
+        };
+    </script>
+    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
+
 </body>
 
 </html>
