--- a/index.html
+++ b/index.html
@@ -12,36 +12,29 @@
 <body>
     <header>
         <nav>
-
             <div id="logo"><a href="index.html" target="_self">EIGAKU</a></div><!--логотип-->
-
             <div id="nav-medium">
                 <ul id="not-burger"><!--три челикса-->
                     <li><a href="index.html" target="_self">Главная</a></li>
                     <li id="catalog">
                         <a href="#">каталог</a>
                         <div id="catalog-content">
-                            <a href="pages/catalog.html">кино</a>
-                            <a href="pages/catalog.html">музыка</a>
+                            <a href="#">кино</a>
+                            <a href="#">музыка</a>
                         </div>
                     </li>
                     <li><a href="pages/about-us.html" target="_self">о нас</a></li>
                 </ul>
-
                 <form action="/search" method="get" id="search"> <!--поиск-->
                     <input type="search" name="search" placeholder="Поиск">
                     <!-- <button type="submit">Найти</button> -->
                 </form>
-
             </div>
-
-
             <div class="menu"> <!--бургер менюха-->
                 <input type="checkbox" id="burger-checkbox" class="burger-checkbox"> <!--создаем чекбокс-->
                 <label for="burger-checkbox" class="burger"></label>
-
                 <ul class="menu-list">
-                    <li><a href="/pages/registration.html" class="menu-item">коллекции</a>
+                    <li><a href="pages/registration.html" class="menu-item">коллекции</a>
                     <li>
                     <li id="burger-catalog">
                         <div id="burger-catalog-menu">
@@ -49,7 +42,6 @@
                             <a href="/pages/catalog.html">музыка</a>
                         </div>
                         <a href="#" class="menu-item">каталог</a>
-
                     </li>
                     <li><a href="pages/about-us.html" target="_self" class="menu-item">о нас</a></li>
                     <li><a href="#" class="menu-item">Подписка</a>
@@ -58,12 +50,9 @@
                     <li>
                 </ul>
             </div>
-
         </nav>
     </header>
-
     <div class="all">
-
         <div class="carousel-container">
             <h2>фильмы</h2>
             <button class="carousel-btn prev">&#10094;</button>
@@ -87,7 +76,6 @@
             </div>
             <button class="carousel-btn next">&#10095;</button>
         </div>
-
         <div class="carousel-container">
             <h2>мультсериалы</h2>
             <button class="carousel-btn prev">&#10094;</button>
@@ -114,7 +102,6 @@
             </div>
             <button class="carousel-btn next">&#10095;</button>
         </div>
-
         <div class="carousel-container">
             <h2>альбомы</h2>
             <button class="carousel-btn prev">&#10094;</button>
@@ -138,7 +125,6 @@
             </div>
             <button class="carousel-btn next">&#10095;</button>
         </div>
-
         <div class="carousel-container">
             <h2>аниме</h2>
             <button class="carousel-btn prev">&#10094;</button>
@@ -164,7 +150,6 @@
             </div>
             <button class="carousel-btn next">&#10095;</button>
         </div>
-
         <footer>
             <div id="footer-items">
                 <span>&copy; 2025 <a href="index.html" target="_self">EIGAKU</a> </span>
@@ -176,9 +161,11 @@
                 <span><a href="pages/about-us.html" target="_self">о нас</a></span>
             </div>
         </footer>
-        <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
-        <script src="js/carousel.js"></script>
-        <script src="js/search.js"></script>
+
+    </div>
+    <script src="https://code.iconify.design/2/2.1.2/iconify.min.js"></script>
+    <script src="js/carousel.js"></script>
+    <script src="js/search.js"></script>
 </body>
 
 </html>
